Added profiling code for stm8. Added command line parsing of arguments for the glitch scripts

--- a/stm8/bootloader/Makefile
+++ b/stm8/bootloader/Makefile
@@ -1,8 +1,8 @@
 CC=sdcc
 
-all: test.c
-	$(CC) -mstm8 --std-c99 --no-peep test.c
-	@mv test.ihx test.hex
+all: bl_dump.c
+	$(CC) -mstm8 --std-c99 --no-peep bl_dump.c
+	@mv bl_dump.ihx bl_dump.hex
 
 clean:
 	@rm -f *.ihx *.o *.asm *.lst *.map *.cdb *.lk *.rel *.rst *.sym *.hex
